--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
 
     /* Linting */
     "strict": true,
